--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,14 +70,14 @@ TABLE OF CONTENTS:-
 ================================================================*/
 /* --------------- variable --------------- */
 :root {
-  --color-main:#0066ff;
-  --color-primary:#0066ff;
-  --color-secondary:#02b5ff;
+  --color-main:#4A00E1;  
+  --color-primary:#4A00E1;
+  --color-secondary:#4A00E1;
   --color-blue2: #4a00e1;
-  --color-blue4: #5842bc;
-  --color-blue5: #157efb;
-  --color-blue6: #6640f4;
-  --color-blue7: #8169f1;
+  --color-blue4: #4A00E1;
+  --color-blue5: #4A00E1;
+  --color-blue6: #4A00E1;
+  --color-blue7: #4A00E1;
   --color-lightBlue:#15f1ff;
   --color-darkBlue:#010049;
   --color-darkBlue2:#1f227d;
